    + Fixed Custom field not working in Routing module (#4174);
    + Fixed Circuit Type showing differently in two windows (#4104);
    + Fixed Vault Item Custom Field not writable (#4058);
    + Fixed Undefined variable when adding nameserver (#4230);
    + Fixed Tag Management Color Picker (#3629);
    + Fixed Arrows for linked addresses do not match between themes (#4216);

    Enhancements, changes:
    ----------------------------
    + Added support for redundant PowerDNS databases (#3981);
    + Added option to export data for VLAN,VRF and Devices directly from tools page;
    + Added option to disable OpenStreetMap address geoip lookups;
    + Added $api_stringify_results config.php option for <PHP81 API backwards compatibility;
    + Added support for newly added widgets to be sortable with jQuery (#4711);
    + Added support for using widget parameters; added recent_logins widget (#4184);

    Security Fixes:
    ----------------------------
    + Upgraded jQuery to 3.7.1;
    + Upgraded bootstrap to 3.4.1;
    + Upgraded jQuery-ui to 1.13.3;
    + Cookies set without Secure attribute;
    + Multiple XSS injections (#4145,#4146,#4147,#4148,#4149.#4150,#4151);
    + HTML DOM XSS injection via filenames when uploading (#4160);
    + Escape loaded database strings by default, stored XSS defense;
    + Increase minimum 2FA secret length to 26 (128bit);

== 1.6.0

    Enhancements, changes:
    ----------------------------
    + php8.4 compatibility;;
    + MySQL 5.5.3+ is now required (support for utf8mb4);

    Security Fixes:
    ----------------------------
    + SQL injection in custom field enum/set types;
    + Directory traversal possible in RIPE query;
    + XSS (reflected) in 'bw-calculator-result.php';
    + XSS (reflected) by invalid email address response;
    + XSS (reflected) by /app/tools/subnet-masks/popup.php (#3738);
    + XSS (stored) in user widget settings;
    + XSS and LDAP injection in ad-search-result.php;