@@ -32,6 +32,7 @@
     + Fixed Undefined variable when adding nameserver (#4230);
     + Fixed Tag Management Color Picker (#3629);
     + Fixed Arrows for linked addresses do not match between themes (#4216);
+    * Fixed Captcha and invalid login checks (#3480, #4198);
 
     Enhancements, changes:
     ----------------------------
